fixed paddings and text-align

--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -15,8 +15,10 @@ h1 {
 }
 h2 {
     font-size: 2.4rem;
+    font-weight: 300;
     color: $color_main-dark;
 }
+
 // h3 { font-size: 2.5rem; }
 // h4 { font-size: 2.1rem; }
 // h5 { font-size: 1.9rem; }
