--- a/dev/scss/block/_container.scss
+++ b/dev/scss/block/_container.scss
@@ -2,7 +2,7 @@
 	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 0 1rem;
+	padding: 0 4rem;
 
 		@media (max-width: 1200px) {
 	    	width: 85%;
