--- a/dev/scss/block/_helper.scss
+++ b/dev/scss/block/_helper.scss
@@ -26,3 +26,6 @@
 .h-bg {
 	background-color: #f5f5f0;
 }
+.h-no-scroll {
+	overflow: hidden;
+}
