--- a/dev/scss/block/_section-tabs.scss
+++ b/dev/scss/block/_section-tabs.scss
@@ -28,6 +28,7 @@
 
 		/*стили*/
 		margin-bottom: 3.8rem;
+		padding: 0;
 
 		& > ul {
 		      /*поведение*/
@@ -44,7 +45,7 @@
 			      /*стили*/
 			      background-color: $color_main;
 			      list-style: none;
-			      padding: 2.5rem 4.5rem 2.5rem 4.5rem;
+			      padding: 2.5rem 4rem 2.5rem 4rem;
 			      margin: 1px;
 			      cursor: pointer;
 			      text-align: center;
@@ -72,7 +73,7 @@
 			      &.active {
 			      	position: relative;
 			      	background-color: #fff;
-			      	padding: 2.5rem 4.5rem 2.5rem 4.5rem;
+			      	padding: 2.5rem 4rem 2.5rem 4rem;
 
 			      	p {
 			      		color: $color_main-dark;
@@ -124,6 +125,7 @@
 
 		/*стили*/
 		// margin-bottom: 3.8rem;
+		padding: 0;
 
 
 		& > ul {
@@ -144,10 +146,10 @@
 			      color: $color_main-dark;
 			      margin-bottom: 0;
 			      list-style: none;
-			      padding: 1.6rem .5rem;
+			      padding: 1.6rem 4rem;
 			      margin: 1px;
 			      cursor: pointer;
-			      text-align: center;
+			      text-align: left;
 
 			      font-size: 1.8rem;
 
