--- a/dev/scss/block/_tel.scss
+++ b/dev/scss/block/_tel.scss
@@ -3,6 +3,7 @@
 	font-size: 2.4rem !important;
 	font-weight: 600;
 	text-decoration: none;
+	text-shadow: 0 -1px 0 rgba(0,0,0,.6);
 }
 .tel__note {
 	font-size: 14px;
